--- a/templates/cyclope/staticpage_detail.html
+++ b/templates/cyclope/staticpage_detail.html
@@ -1,6 +1,5 @@
-{% comment %} {% extends base_template %} {% endcomment %}
+{% extends host_template %}
 
 {% block content %}
-
 <p>{{ staticpage.name }} detail</p>
-{% endblock %}
+{% endblock content%}
