--- a/templates/cyclope/themes/potente/one_sidebar.html
+++ b/templates/cyclope/themes/potente/one_sidebar.html
@@ -71,7 +71,7 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
           <!-- INICIA ESPACIO AGUA -->
           <div id="agua">
             <div class="top"></div>
-
+           {{ left_region }}
             <!-- !N FALTA IMPLEMENTAR: menu de secciones
                  {$menu}
             -->
