--- a/templates/cyclope/themes/potente/two_sidebars.html
+++ b/templates/cyclope/themes/potente/two_sidebars.html
@@ -10,6 +10,8 @@ Ten en cuenta que las imagenes, los nombres y los logos de este sitio no pueden 
 Gracias a Radioteca.net y Unesco.
 Si modificas no borres estas lineas :)
  -->
+ {% load layout %}
+
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="es" lang="es">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -37,6 +39,7 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
   </head>
 
   <body>
+    algo por acá
     <div id="mascara">
 
       <div id="cabezal">
@@ -47,15 +50,17 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
           </form>
         </div>
         <div class="logo">
-          <h1><a href="{{ site_settings.url }}">{{ site_settings.title }}</a></h1>
-          <h2><a href="{{ site_settings.url }}">{{ site_settings.url }}</a></h2>
+          <h1><a href="{{ CYCLOPE_SITE_SETTINGS.url }}">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a></h1>
+          <h2><a href="{{ CYCLOPE_SITE_SETTINGS.url }}">{{ CYCLOPE_SITE_SETTINGS.url }}</a></h2>
         </div>
       </div><!-- TERMINA CABEZAL -->
 
-      {% if menu %}
+      {% region 'header'%}
+
+      {% if main_menu %}
       <div class="menuh">
         <ul>
-          {% for item in menu %}
+          {% for item in main_menu %}
           <li><a href="{{item.url}}"><span>{{ item.name }}</span></a></li>
           {% endfor %}
         </ul>
@@ -71,7 +76,8 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
           <!-- INICIA ESPACIO AGUA -->
           <div id="agua">
             <div class="top"></div>
-
+{%comment%}           {{ left_region|safe }} {%endcomment%}
+           {% region 'left' %}
             <!-- !N FALTA IMPLEMENTAR: menu de secciones
                  {$menu}
             -->
@@ -120,9 +126,9 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
           <!-- INICIA ESPACIO AIRE -->
           <div id="aire">
             <!-- INICIA TERCIARIA -->
-
             <div id="{{ terciaria.label }}">
               <div class="top"><span>{{ terciaria.label }}</span> </div>
+              {% region  'right' %}
               <div class="box">
                 {% for article in terciaria.articles.all %}
                 <h6 class="fecha">{{ article.date }}</h6>
@@ -174,10 +180,8 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
             <!-- INICIA PRINCIPAL -->
             <div id="principal">
               <div class="top"><span>contenido</span></div>
-              {% block content %}
-              {% endblock %}
-              
-              {% include the_content%}
+
+              {% block content %} {% endblock %}
 
 {% comment %}
               {section name=notaprincipal loop=$principal}
