--- a/templates/cyclope/themes/potente/two_sidebars.html
+++ b/templates/cyclope/themes/potente/two_sidebars.html
@@ -39,7 +39,6 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
   </head>
 
   <body>
-    algo por acá
     <div id="mascara">
 
       <div id="cabezal">
@@ -51,7 +50,7 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
         </div>
         <div class="logo">
           <h1><a href="{{ CYCLOPE_SITE_SETTINGS.url }}">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a></h1>
-          <h2><a href="{{ CYCLOPE_SITE_SETTINGS.url }}">{{ CYCLOPE_SITE_SETTINGS.url }}</a></h2>
+          <h2><a href="{{ CYCLOPE_SITE_SETTINGS.url }}">{{ CYCLOPE_SITE_SETTINGS.url }} two sidebars</a></h2>
         </div>
       </div><!-- TERMINA CABEZAL -->
 
