--- a/templates/cyclope/inline_view.html
+++ b/templates/cyclope/inline_view.html
@@ -1,2 +1,5 @@
-{% comment %} this template wraps a view when inserted inline in a region {% endcomment%}
+{% comment %}
+This template wraps a view when inserted inline in a region
+{% endcomment%}
+
 {% block content %}{% endblock content %}
