--- a/templates/admin/cyclope/menuitem/change_form.html
+++ b/templates/admin/cyclope/menuitem/change_form.html
@@ -1,5 +1,9 @@
 {% extends "admin/change_form.html" %}
 
+{% comment %}
+Configures chainedSelect for views in relation to content type
+{% endcomment %}
+
 {% block extrahead %}{{ block.super }}
 {% url admin:jsi18n as jsi18nurl %}
 <script type="text/javascript" src="{{ jsi18nurl|default:"../../../jsi18n/" }}"></script>
