more docstrings and code cleanup

--- a/templates/cyclope/region.html
+++ b/templates/cyclope/region.html
@@ -1,5 +1,5 @@
 {% comment %}
-template to insert views inside layout regions
+template used to insert views inside layout regions
 {% endcomment %}
 
 <div class="region {{ layout_name }}_region" id={{ region_name }}>
