working on menuitem region views

--- a/cyclope/templates/cyclope/themes/potente/one_sidebar.html
+++ b/cyclope/templates/cyclope/themes/potente/one_sidebar.html
@@ -54,6 +54,10 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
         </div>
       </div><!-- TERMINA CABEZAL -->
 
+      {% region 'header' %}
+
+{% comment %}
+{% endcomment %}
       {% if main_menu %}
       <div class="menuh">
         <ul>
