--- a/cyclope/templates/cyclope/themes/potente/two_sidebars.html
+++ b/cyclope/templates/cyclope/themes/potente/two_sidebars.html
@@ -56,6 +56,7 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
 
       {% region 'header'%}
 
+{%comment%}
       {% if main_menu %}
       <div class="menuh">
         <ul>
@@ -65,6 +66,7 @@ window.open(name,'popup1','width=750,height=580,resizable=yes,menubar=no,toolbar
         </ul>
       </div>
       {% endif %}
+{%endcomment%}
 
       <div class="clear"></div>
 
